1.0.12

 - Added history for contrib/twitter-fetcher.
 - Added an option to disable voting.
 - Added automatic promotion of most active voters to admins.
 - Added support for sysvinit (Debian).
 - Fixed connection spinning in contrib/hotline.